# bogbogprox

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/bogbogprox-core/src/: model.rs
crates/bogbogprox-engine/: Cargo.toml
crates/bogbogprox-engine/src/: lib.rs
crates/bogbogprox-mcp/src/: main.rs
crates/bogbogprox-store-postgres/src/: lib.rs
crates/bogbogprox-store-sqlite/src/: lib.rs
crates/bogbogprox-tui/src/: main.rs
crates/bogbogproxd/src/: api.rs  dashboard.html  main.rs  repeater.rs
crates/snare-core/: Cargo.toml
crates/snare-core/src/: intercept.rs  lib.rs  model.rs  rules.rs  scanner.rs  store.rs
crates/snare-desktop/: Cargo.toml  tauri.conf.json
crates/snare-desktop/src/: main.rs
crates/snare-engine/: Cargo.toml
crates/snare-engine/src/: ca.rs  lib.rs
crates/snare-mcp/: Cargo.toml
crates/snare-mcp/src/: main.rs
crates/snare-plugin/: Cargo.toml
crates/snare-plugin/src/: lib.rs
crates/snare-plugin/tests/: hooks.rs
crates/snare-plugin/wit/: world.wit
crates/snare-store-postgres/src/: lib.rs
crates/snare-store-sqlite/: Cargo.toml
crates/snare-store-sqlite/src/: lib.rs
crates/snare-tui/: Cargo.toml
crates/snare-tui/src/: httpclient.rs  main.rs  sse.rs
crates/snared/: Cargo.toml
crates/snared/src/: active_scan.rs  api.rs  auth.rs  config.rs  dashboard.html  intruder.rs  macros.rs  main.rs  paths.rs  pubsub.rs  repeater.rs
docs/: ARCHITECTURE.md  DESIGN.md  USAGE.md
examples/plugins/header-tagger/: Cargo.toml
examples/plugins/header-tagger/src/: lib.rs
